@@ -113,6 +113,8 @@ FreeGLut3_0 = _('OpenGL library')
 FreeGLut3_1 = _('This is a library for writing OpenGL programs.')
 FrozenBubble_0 = _('Frozen Bubble')
 FrozenBubble_1 = _('Open source clone of the popular "Puzzle Bobble" game')
+Gajim_0 = 'Gajim'
+Gajim_1 = _('an light-weight XMPP client, supporting GTalk. GTK version')
 GCompris_0 = 'GCompris'
 GCompris_1 = _('Educational games for children aged 2 to 10')
 GCstar_0 = 'GCstar'
@@ -223,8 +225,6 @@ OpenJDK_0 = _('OpenJDK 6')
 OpenJDK_1 = _('Open source implementation of Java')
 Openshot_0 = 'Openshot'
 Openshot_1 = _('Popular non-linear video editor')
-POSIX_ManPages_0 = _('POSIX library manual pages')
-POSIX_ManPages_1 = _('Install manual pages about Linux system calls, library calls, and POSIX libraries.')
 Parcellite_0 = 'Parcellite'
 Parcellite_1 = _('This is a powerful clipboard manager. It can preserve 25 strings concurrently.')
 PiTiVi_0 = 'PiTiVi'
@@ -235,6 +235,10 @@ Pino_0 = 'Pino'
 Pino_1 = _('Twitter and Identi.ca client')
 PowerTop_0 = 'PowerTop'
 PowerTop_1 = _('Help you save power for your laptop.')
+POSIX_ManPages_0 = _('POSIX library manual pages')
+POSIX_ManPages_1 = _('Install manual pages about Linux system calls, library calls, and POSIX libraries.')
+PSI_0 = 'PSI'
+PSI_1 = _('An XMPP client, supporting GTalk. QT version')
 QBittorrent_0 = 'qBittorrent'
 QBittorrent_1 = _('Lightweight, featureful open source equivalent to utorrent')
 QCad_0 = 'QCad'
